# plex_playlist_manager

./: .gitignore  README.md  pyproject.toml
src/plex_playlist_manager/: __init__.py  app.py  authentication.py  config.py  main.py  playlist_gui.py  plex_data.py  scratch.py  tmp.py
src/plex_playlist_manager/api/: database.py
src/plex_playlist_manager/app/templates/: gui.html
src/plex_playlist_manager/apps/auth/: __init__.py  routes.py
src/plex_playlist_manager/apps/home/: routes.py
src/plex_playlist_manager/apps/playlist_manager/: routes.py
src/plex_playlist_manager/cache/: redis.py
src/plex_playlist_manager/flask/: app.py  routes.py  views.py
src/plex_playlist_manager/flask/static/css/: main_page.css
src/plex_playlist_manager/flask/templates/: gui.html  index.html  main_2.html
src/plex_playlist_manager/gui/: kivy_test.py  playlist_gui.py
src/plex_playlist_manager/guis/: kivy_test.py
src/plex_playlist_manager/models/: plex_data_models.py
src/plex_playlist_manager/plex/: __init__.py  authentication.py  data.py  data_validation.py  scratch_data.py  store_data.py
src/plex_playlist_manager/static/css/: base.css  layout.css  main_container.css  main_page.css  responsive.css  sidebar_container.css
src/plex_playlist_manager/static/css/playlist_manager/: main_container.css  playlist_container.css  sidebar_container.css
src/plex_playlist_manager/static/js/: main_2.js
src/plex_playlist_manager/templates/: css_imports.html  index.html  main_imports.html  playlist_manager.html
src/plex_playlist_manager/templates/playlist_manager/: audio_playlist.html  photo_playlist.html  playlist_manager_imports.html  playlist_manager_main.html  template_audio_playlist.html  template_topbar_audio_details.html  template_video_playlist.html  video_playlist.html
(+1 files in other folders)
